--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shari Chin # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/Shari Headshot Photo.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Driven Enthusiast who loves tracking time <br>
   Cultured Traveler. Nature lover. Creative Problem Solver.  <br><br>
