--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Shari Chin # your name (or website title) here
 logo: "/images/Shari Headshot Photo.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Data Driven Enthusiast who loves tracking time <br>
+  Data Driven Professional who loves tracking time <br>
   Cultured Traveler. Nature lover. Creative Problem Solver.  <br><br>
-  <a href="https://www.linkedin.com/in/shari-chin/">View My LinkedIn Profile</a>   
+  <a href="https://www.linkedin.com/in/sharichin/">View My LinkedIn Profile</a>   
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
