--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shari Chin # your name (or website title) here
-logo: "/images/Shari Headshot Photo.jpg" # your photo (or logo) here
+logo: "/images/Shari Github Headshot2.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Analyst <br>
   Creative Problem Solver <br>
